k8s-manifests/ingress/kafka-exporter-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafka-exporter-ingress
  namespace: kafka
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: kafka-exporter.example.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kafka-exporter
                port:
                  number: 9308
